fixed untracked files

--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,7 @@ tex/paper.out
 tex/paper.run.xml
 tex/paper.synctex.gz
 tex/paper.toc
-*/*/bin
+MemorySafety/*/bin
 */*/*/bin
 */*/*/*/bin
 */*/output
