fixed untracked files

--- a/.gitignore
+++ b/.gitignore
@@ -14,9 +14,5 @@ tex/paper.out
 tex/paper.run.xml
 tex/paper.synctex.gz
 tex/paper.toc
-MemorySafety/*/bin
-*/*/*/bin
-*/*/*/*/bin
-*/*/output
-*/*/*/output
-*/*/*/*/output
+**/bin
+**/output
